Domain generation with advanced settings

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,6 @@ NEXTAUTH_URL="http://localhost:3000"
 # Next Auth Discord Provider
 DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
+
+GODADDY_KEY="3mM44UchDmRazk_StrT2SftadY84YsC4sWuzf"
+GODADDY_SECRET="NdZ5VtfChXQM9ujKYT9sN5"
