--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.3.1",
+    "@types/jsdom": "^21.1.1",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "jsdom": "^22.1.0",
     "lucide-react": "^0.230.0",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
